--- a/home.html
+++ b/home.html
@@ -2,12 +2,12 @@
 <html>
 	<head>	
 		<title></title>
-        <link rel="stylesheet" type="text/css" href="msgstyle.css">
+        <link rel="stylesheet" type="text/css" href="css/msgstyle.css">
         <style>
             #msg-container2{
                 width: 50vw;
                 height: 100vh;
-                background-image: url("bg2.jpg");
+                background-image: url("images/bg2.jpg");
                 /*background-repeat: no-repeat;
                 background-size: cover;*/
             }
@@ -34,9 +34,9 @@
 					<div id="header" style="background: none;">
 						<div id="network" class="network">
 							<p class="p1">
-							<img src="network-1.png" class="net-img" style="margin-left: 2%;"/>&nbsp;
+							<img src="images/network-1.png" class="net-img" style="margin-left: 2%;"/>&nbsp;
 							Digicel&nbsp;
-							<img src="wifi.png" class="net-img"/>
+							<img src="images/wifi.png" class="net-img"/>
 							</p>
 							<div id="notif" class="time"></div>
 							<p class="p" id="p">
@@ -44,7 +44,7 @@
 							</p>
 							<p class="p1">
 								100%
-								<img src="battery-1.png" class="net-img" stlye="width: 40px;"/>
+								<img src="images/battery-1.png" class="net-img" stlye="width: 40px;"/>
 							</p>
 						</div>
 						<div class="contact" id="contact">
@@ -64,9 +64,9 @@
                     <br><br><br><br><br><br>
 					<div class="header-2" id="head">
 						<br>
-						<p class="p1" style="text-transform: uppercase; margin-left: 2%;"><img class="notif-img" src="gmail-2.png"/></p>
-						<p class="p1" style="text-transform: uppercase;"><img class="notif-img" style="width: 16%;" src="gm.png"/></p>
-						<p style="margin-left: 66%;" class="p1"><img class="notif-img" style="width: 8%;" src="now.png"/></p>
+						<p class="p1" style="text-transform: uppercase; margin-left: 2%;"><img class="notif-img" src="images/gmail-2.png"/></p>
+						<p class="p1" style="text-transform: uppercase;"><img class="notif-img" style="width: 16%;" src="images/gm.png"/></p>
+						<p style="margin-left: 66%;" class="p1"><img class="notif-img" style="width: 8%;" src="images/now.png"/></p>
 						<br><br><br>
 						<p style="margin-left: 2%;" class="p1">from Grim Reaper</p>
                     </div><br><br><br><br>
@@ -80,6 +80,6 @@
 				
 			</div>
 		</div>
-		<script src="msgscript.js" type="text/javascript"></script>
+		<script src="js/msgscript.js" type="text/javascript"></script>
 	</body>
 </html>
